# uncat

./: CMakeLists.txt  Makefile  README.md  TODO.txt  a.out  dictionary.txt  myMakefile  node.cpp  node.h  runTests.cpp  tree.cpp  tree.h  uncat.cpp  wordstest.txt
